--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico?">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="google-site-verification" content="e1pSkAa0wXq6aHiW7jRRN7E4JuAh-0GddMMHWlF0wYY"/>
 
     {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
@@ -91,7 +90,7 @@
     {% if site.github.is_project_page %}
     <p>{{ site.github.repository_name }} is maintained by <a href="{{ site.github.owner_url }}" target="_blank">{{ site.github.owner_name }}</p>
     {% endif %}
-    <p><small>Leap Day theme by <a href="https://twitter.com/mattgraham" target="_blank">mattgraham</a></small></p>
+    <!-- p><small>Leap Day theme by <a href="https://twitter.com/mattgraham" target="_blank">mattgraham</a></small></p -->
     <!-- p><small>Screenshots taken using <a href="https://getgreenshot.org/" target="_blank">Greenshot</a></small></p -->
 </footer>
 </div>
