--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico?">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="google-site-verification" content="xpSsDih2DXYxIhMRBpmz-zKqjjTIOnZJzhJZHbuN_Mg" />
 
     {% seo %}
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
