#68 Progress on GitHub Pages website

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -92,8 +92,12 @@ blockquote ul {
 }
 
 #banner .downloads span {
-  color: #eeeeee;
+  color: #000000;
   margin-right: -10px;
+}
+
+.downloads {
+  margin-right: -30px;
 }
 
 #banner .button {
