--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -72,6 +72,7 @@ blockquote ul {
 #banner {
   background: #d38100;
   border: 1px solid #000000;
+  border-radius: 12px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
 }
 
@@ -136,6 +137,7 @@ nav {
 }
 
 section {
+  border-radius: 12px;
   width: 644px;
 }
 
