#68 More website fiddling

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -73,7 +73,7 @@
             <li><a href="index"><b>Home</b></a></li>
             <li><a href="https://github.com/Corionis/ELS/discussions" target="_blank"><b>Discussions <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></b></a> </li>
             <li><a href="https://github.com/Corionis/ELS/wiki" target="_blank"><b>Documentation <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></b></a> </li>
-            <li><a href="Downloads"><b>Downloads</b></a> </li>
+            <li><a href="Downloads"><b>Downloads & Updates</b></a> </li>
             <li><a href="Privacy"><b>Privacy & Security</b></a> </li>
             <li><a href="Start"><b>Quick Start</b></a> </li>
             <li><a href="Screenshots"><b>Screenshots</b></a></li>
