--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -44,7 +44,7 @@
 	<span class="topimage"><a href="index"><img class="topimage" src="assets/images/els-logo-72px.png" alt="" border="0"></a></span>
     <span class="topname">{{ page.title | default: site.title | default: site.github.repository_name }}</span>
     <p class="topdescription">&nbsp;&nbsp;&nbsp;&nbsp;{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
-    <p class="who"><b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" class="button fork" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></a></b> on GitHub</p>
+    <p class="who"><b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" class="button fork" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></a></b></p>
     <p class="version"><b>ELS Version:</b> {{ site.version }}&nbsp;&nbsp;&nbsp;&nbsp;<b>Build:</b> {{ site.build }}</p>
 </header>
 
@@ -52,7 +52,7 @@
     <!-- a href="" class="button fork" target="_blank">Donate</a -->
     {% if site.show_downloads %}
     <div class="downloads">
-        <span>DownloadS</span>
+        <span>Downloads</span>
         <ul>
             <!-- li><a href="{{ site.github.android_url }}" class="button">Android</a></li -->
             <!-- li><a href="{{ site.github.ios_url }}" class="button">iOS</a></li -->
@@ -71,13 +71,14 @@
         <ul>
             <li><hr class="navSeparator"/></li>
             <li><a href="index"><b>Home</b></a></li>
-            <li><a href="https://github.com/Corionis/ELS/discussions" target="_blank"><b>Discussions <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></b></a> </li>
-            <li><a href="https://github.com/Corionis/ELS/wiki" target="_blank"><b>Documentation <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></b></a> </li>
-            <li><a href="Downloads"><b>Downloads & Updates</b></a> </li>
-            <li><a href="Privacy"><b>Privacy & Security</b></a> </li>
-            <li><a href="Start"><b>Quick Start</b></a> </li>
-            <li><a href="Screenshots"><b>Screenshots</b></a></li>
-            <li><a href="https://github.com/Corionis/ELS/issues" target="_blank"><b>Submit Issue <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></b> </a></li>
+            <li><a href="downloads"><b>Downloads & Updates</b></a> </li>
+            <li><a href="features"><b>Features</b></a> </li>
+            <li><a href="privacy"><b>Privacy & Security</b></a> </li>
+            <li><a href="screenshots"><b>Screenshots</b></a></li>
+            <li><hr class="navSeparator"/></li>
+            <li><a href="https://github.com/Corionis/ELS/discussions" target="_blank"><b>Discussions <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></b></a> </li>
+            <li><a href="https://github.com/Corionis/ELS/wiki" target="_blank"><b>Documentation <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></b></a> </li>
+            <li><a href="https://github.com/Corionis/ELS/issues" target="_blank"><b>Submit Issue <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></b> </a></li>
             <li><hr class="navSeparator"/></li>
         </ul>
     </nav>
@@ -101,7 +102,7 @@
     </section>
     {% endif %}
 
-    <p style="text-align: right; margin-top: -16px; margin-right: -42px;"><b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" class="button fork" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="Opens new tab" align="bottom"  border="0"></a></b> on GitHub</p>
+    <div style="text-align: right; margin-top: -16px; margin-right: -42px;"><b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" class="button fork" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></a></b></div>
 </div>
 
 <!-- footer>
@@ -110,7 +111,6 @@
     {% if site.github.is_project_page %}
     <p>{{ site.github.repository_name }} is maintained by <a href="{{ site.github.owner_url }}" target="_blank">{{ site.github.owner_name }} </p>
     {% endif %}
-    <!-- p><small>Leap Day theme by <a href="https://twitter.com/mattgraham" target="_blank">mattgraham</a></small></p -->
 </footer -->
 </div>
 
