--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -58,8 +58,8 @@
             <!-- li><a href="{{ site.github.ios_url }}" class="button">iOS</a></li -->
             <!-- li><a href="{{ site.github.macos_url }}" class="button">macOS tar</a></li -->
             <li><a href="{{ site.github.linux_url }}" class="button">Linux tar</a></li>
-            <!-- li><a href="{{ site.github.windows_exe_url }}" class="button">Windows installer</a></li --->
-            <!-- li><a href="{{ site.github.windows_zip_url }}" class="button">Windows zip</a></li --->
+            <li><a href="{{ site.github.windows_exe_url }}" class="button">Windows installer</a></li>
+            <li><a href="{{ site.github.windows_zip_url }}" class="button">Windows zip</a></li>
         </ul>
     </div>
     <span id="logo"></span>
