--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -56,7 +56,7 @@
         <ul>
             <!-- li><a href="{{ site.github.android_url }}" class="button">Android</a></li -->
             <!-- li><a href="{{ site.github.ios_url }}" class="button">iOS</a></li -->
-            <!-- li><a href="{{ site.github.macos_url }}" class="button">macOS dmg</a></li -->
+            <li><a href="{{ site.github.macos_url }}" class="button">macOS dmg</a></li>
             <li><a href="{{ site.github.linux_url }}" class="button">Linux tar</a></li>
             <li><a href="{{ site.github.windows_exe_url }}" class="button">Windows installer</a></li>
             <li><a href="{{ site.github.windows_zip_url }}" class="button">Windows zip</a></li>
