#68 Enabled the Donate button

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -49,7 +49,7 @@
 </header>
 
 <div id="banner">
-    <!-- a href="" class="button fork" target="_blank">Donate</a -->
+    <a href="https://ko-fi.com/elsnavigator" class="button fork" target="_blank">Donate</a>
     {% if site.show_downloads %}
     <div class="downloads">
         <span>Downloads</span>
