--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -48,7 +48,7 @@
         <span class="version">
             <b>ELS Version:</b> {{ site.version }}&nbsp;&nbsp;&nbsp;&nbsp;<b>Build:</b> {{ site.build }}
         <span class="who">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></a></b>
         </span>
         </span>
@@ -68,7 +68,7 @@
             <li><a href="{{ site.github.windows_exe_url }}" class="button">Windows installer</a></li>
             <li><a href="{{ site.github.windows_zip_url }}" class="button">Windows zip</a></li>
             <li>&nbsp;</li>
-            <li><a href="https://ko-fi.com/elsnavigator" class="donate" target="_blank">Donate</a></li>
+            <li><a href="https://ko-fi.com/elsnavigator" class="donate" target="_blank">Donate <img src="assets/images/link.png" alt="" title="On ko-fi.com" align="bottom"  border="0"></a></li>
         </ul>
     </div>
     <span id="logo"></span>
