--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -48,7 +48,7 @@
         <span class="version">
             <b>ELS Version:</b> {{ site.version }}&nbsp;&nbsp;&nbsp;&nbsp;<b>Build:</b> {{ site.build }}
         <span class="who">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            &nbsp;&nbsp;
             <b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></a></b>
         </span>
         </span>
@@ -110,8 +110,6 @@
         {{ content }}
     </section>
     {% endif %}
-
-    <div style="text-align: right; margin-top: -16px; margin-right: -42px;"><b><a style="color: #d38100; font-weight: bold" href="{{ site.github.repository_url }}" class="button fork" target="_blank">ELS Project <img src="assets/images/link.png" alt="" title="On GitHub" align="bottom"  border="0"></a></b></div>
 </div>
 
 <!-- footer>
