#122 Added Changelist to web site

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -80,6 +80,7 @@
         <ul>
             <li><hr class="navSeparator"/></li>
             <li><a href="index"><b>Home</b></a></li>
+            <li><a href="changes"><b>Changelist</b></a> </li>
             <li><a href="downloads"><b>Downloads & Updates</b></a> </li>
             <li><a href="features"><b>Features</b></a> </li>
             <li><a href="privacy"><b>Privacy & Security</b></a> </li>
@@ -106,7 +107,7 @@
         </p>
     </section>
     {% else %}
-    <section>
+    <section id="contentPage">
         {{ content }}
     </section>
     {% endif %}
