--- a/docs/_includes/changes.html
+++ b/docs/_includes/changes.html
@@ -116,7 +116,7 @@
 <h3>10 February 2025</h3>
 <ul>
     <li>Fixed null pointer error when executing a Job.</li>
-    <li>Fixed Hint Server and remote Subscriber override host handling.</li>
+    <li>Fixed Hint Server and remote Subscriber override server handling.</li>
     <li>Fixed path handling during a backup operation.</li>
 </ul>
 
@@ -284,9 +284,9 @@
     <li>Fixed start-up bug when there are no repositories defined yet.</li>
     <li>Fixed File, Open Subscriber when there is an existing remote connection.</li>
     <li>Fixed a save/delete bug in all Tools.</li>
-    <li>Added a dialog during File, Open Subscriber and Open Hint Tracking to select the host or listen address for a remote connection.</li>
-    <li>Added -O | --override-host to use the listen address:port for out-going Subscriber connections from clients.</li>
-    <li>Added -J | --override-hints-host to use the listen address:port for out-going Hint Server connections from clients.</li>
+    <li>Added a dialog during File, Open Subscriber and Open Hint Tracking to select the server or listen address for a remote connection.</li>
+    <li>Added -O | --override-server to use the listen address:port for out-going Subscriber connections from clients.</li>
+    <li>Added -J | --override-hints-server to use the listen address:port for out-going Hint Server connections from clients.</li>
     <li>Note: "Clients" are Navigator and remote Publisher processes.</li>
     <li>Added Hint Tracker/Server to Jobs, Tasks, Origins when required by the Task.</li>
     <li>Hint Server previously used the Task Subscriber key for Job Tasks but was changed to have its own key.</li>
